Add licencing info

--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       <div class="vcenter">
         <h1>RSpec</h1>
         <h2 class="center">Kerry Buckley<br />IPRUG, 4 January 2011</h2>
+        <div class="licence">
+          <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img
+            alt="Creative Commons License"
+            src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a>
+        </div>
       </div>
     </div>
 
