Fix implicit filtering example
There were many problems:

* if should have been :if
* block needs to be a lambda
* still didn't seem to work with calculation in the block

Thanks to @makoto_inoue and @threedaymonk for pointing out that there
was something wrong on the Internet.

--- a/index.html
+++ b/index.html
@@ -448,12 +448,14 @@
       <h1>Implicit filtering</h1>
       <div class="vcenter">
         <pre class="brush: ruby">
+          RUBY_1_9 = (RUBY_VERSION =~ /^1\.9/)
+
           describe "Something" do
-            it "behaves one way in 1.8", if =&gt; { VERSION =~ /^1.8/ } do
+            it "does that when using 1.9", :if =&gt; RUBY_1_9 do
               ...
             end
 
-            it "behaves another way in 1.9", if =&gt; { VERSION =~ /^1.9/ } do
+            it "Does this when not using 1.9", :unless =&gt; RUBY_1_9 do
               ...
             end
           end
