Add navigation hints to front page

--- a/index.html
+++ b/index.html
@@ -35,14 +35,17 @@
   </head>
   <body>
     <div class="slide">
-      <div class="vcenter">
-        <h1>RSpec</h1>
-        <h2 class="center">Kerry Buckley<br />IPRUG, 4 January 2011</h2>
-        <div class="licence">
-          <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img
-            alt="Creative Commons License"
-            src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a>
-        </div>
+      <h1>RSpec</h1>
+      <h2 class="center">Kerry Buckley<br />IPRUG, 4 January 2011</h2>
+      <div class="licence">
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img
+          class="leavealone"
+          alt="Creative Commons License"
+          src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a>
+      </div>
+      <div class="footer">
+        <span class="left">Use space bar or arrow keys to navigate, and escape for index.</span>
+        <span class="right">Built with <a href="https://github.com/Seldaek/slippy">Slippy</a>.</span>
       </div>
     </div>
 
